Finished animation on collaborate with others section, styled JupyterLab Native section to be responsive

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -305,7 +305,10 @@ navbar_gray: false
                         <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
                     </div>
                     <div id="collab-preview-tab-2" class="col-sm-6 lab-collab-preview">
-                        <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/realtime-edit.svg"/>
+                        <h4 id="typeout-cell-1" class="lab-collab-cell-text lab-collab-cell-1-text"></h4>
+                        <h4 id="typeout-cell-2" class="lab-collab-cell-text lab-collab-cell-2-text"></h4>
+                        <img src="./assets/jupyterlab-page/collaboration/cell-output.svg" class="lab-collab-cell-output"/>
+                        <img id="collab-preview-tab-2-img" class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/realtime-edit.svg"/>
                         <p class="lab-collab-preview-text">Work with others in real-time through JupyterLab no matter where you are</p>
                     </div>
                     <div id="collab-preview-tab-3" class="col-sm-6 lab-collab-preview">
