First iteration of the animation for collaboration chat section in realtime collaboration section on the JupyterLab page:

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -305,6 +305,7 @@ navbar_gray: false
                         <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
                     </div>
                     <div id="collab-preview-tab-2" class="col-sm-6 lab-collab-preview">
+                        <img src="./assets/jupyterlab-page/collaboration/realtime-image-mobile.svg" class="lab-collab-realtime-img-mobile img-responsive"/>
                         <h4 id="typeout-cell-1" class="lab-collab-cell-text lab-collab-cell-1-text"></h4>
                         <h4 id="typeout-cell-2" class="lab-collab-cell-text lab-collab-cell-2-text"></h4>
                         <img src="./assets/jupyterlab-page/collaboration/cell-output.svg" class="lab-collab-cell-output"/>
@@ -312,8 +313,19 @@ navbar_gray: false
                         <p class="lab-collab-preview-text">Work with others in real-time through JupyterLab no matter where you are</p>
                     </div>
                     <div id="collab-preview-tab-3" class="col-sm-6 lab-collab-preview">
-                        <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
-                        <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
+                        <div class="lab-collab-chat-img-container">
+                            <div id="lab-collab-chat-entry-1" class="lab-collab-chat-entry">
+                                <h4 id="typeout-chat-1" class="lab-collab-chat-text lab-collab-chat-text-1">Do you have access<br/>to yesterday's data?</h4>
+                                <img class="lab-collab-chat-entry-bubble-1" src="assets/jupyterlab-page/collaboration/chat/person-1-bubble.svg"/>
+                                <img class="lab-collab-chat-entry-circle-1" src="./assets/jupyterlab-page/collaboration/chat/person-1-circle.svg"/>
+                            </div>
+                            <div id="lab-collab-chat-entry-2" class="lab-collab-chat-entry">
+                                <h4 id="typeout-chat-2" class="lab-collab-chat-text lab-collab-chat-text-2"></h4>
+                                <img class="lab-collab-chat-entry-circle-2" src="./assets/jupyterlab-page/collaboration/chat/person-2-circle.svg"/>
+                                <img class="lab-collab-chat-entry-bubble-2" src="./assets/jupyterlab-page/collaboration/chat/person-2-bubble.svg"/>
+                            </div>
+                        </div>
+                        <p class="lab-collab-preview-text">Chat with other contributors that are working on any document within JupyterLab</p>
                     </div>
                     <div class="col-sm-6 lab-collab-about">
                         <h3 class="section-header section-header-left">Real-time<br/> collaboration</h3>
