Fixed chat section in collaboration section to work on mobile correctly

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -313,6 +313,7 @@ navbar_gray: false
                         <p class="lab-collab-preview-text">Work with others in real-time through JupyterLab no matter where you are</p>
                     </div>
                     <div id="collab-preview-tab-3" class="col-sm-6 lab-collab-preview">
+                        <img src="./assets/jupyterlab-page/collaboration/chat/chat-img-mobile.svg" class="lab-collab-chat-img-mobile img-responsive"/>
                         <div class="lab-collab-chat-img-container">
                             <div id="lab-collab-chat-entry-1" class="lab-collab-chat-entry">
                                 <h4 id="typeout-chat-1" class="lab-collab-chat-text lab-collab-chat-text-1">Do you have access<br/>to yesterday's data?</h4>
