Added a download now button to the top of the page to download JupyterLab

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -42,9 +42,10 @@ navbar_gray: false
 </section>
 <div class="lab-content-wrapper">
     <section>
-        <div class="section-white top-section-border">
+        <div class="section-white top-section-border lab-overview">
             <div class="container">
-                <div class="row lab-overview">
+                <div class="row">
+                    <a class="orange-button" href="https://github.com/jupyterlab/jupyterlab">Download from GitHub</a>
                     <div class="col-sm-12 lab-overview-desc">
                         <h4>JupyterLab was created to be the all-in-one workspace for data science, scientific computing, and analytical research. It provides the power, speed and flexibility to get more work done.</h4>
                     </div>
