Fixed many bugs in the real-time collaboration section, restructured javascript to be in one file for JupyterLab page. Added more comments to javascript to explain where and what is happening

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -329,10 +329,12 @@ navbar_gray: false
                         </div>
                         <p class="lab-collab-preview-text">Chat with other contributors that are working on any document within JupyterLab</p>
                     </div>
-                    <div class="col-sm-6 lab-collab-about">
-                        <h3 class="section-header section-header-left">Real-time<br/> collaboration</h3>
-                        <h5 class="lab-collab-about-desc">Create something great together using the built-in Google Drive extension and chat application</h5>
-                        <span class="lab-collab-coming-soon">COMING SOON</span>
+                    <div id="lab-collab-about" class="col-sm-6">
+                        <div id="lab-collab-about-section-header">
+                            <h3 class="section-header section-header-left">Real-time<br/> collaboration</h3>
+                            <h5 class="lab-collab-about-desc">Create something great together using the built-in Google Drive extension and chat application</h5>
+                            <span class="lab-collab-coming-soon">COMING SOON</span>
+                        </div>
                         <ul class="lab-collab-preview-nav">
                             <li data-tab="tab-1" class="lab-collab-preview-nav-item nav-active">Share files through Google Drive</li>
                             <li data-tab="tab-2" class="lab-collab-preview-nav-item">Work in real-time with others</li>
