--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -353,6 +353,7 @@ navbar_gray: false
                         <img src="./assets/lab-native-logo.png" class="section-icon img-responsive"/>
                         <h3 class="col-sm-12 section-header">JupyterLab Native</h3>
                         <p class="col-sm-12 support-paragraph">A desktop application that unlocks a galaxy of possibilities.</p>
+                        <video id="lab-native-lorenz-vid" src="./assets/jupyterlab-page/lab-native/lorenz-animation.mp4"></video>
                         <img class="lab-native-img img-responsive" src="./assets/lab-native-desktop-preview.png"/>
                     </div>
                     <div class="lab-native-features">
