JupyterLab Native now is fully responsive

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -349,12 +349,14 @@ navbar_gray: false
         <div class="section-grey">
             <div class="container-fluid lab-native">
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 lab-native-header">
                         <img src="./assets/lab-native-logo.png" class="section-icon img-responsive"/>
                         <h3 class="col-sm-12 section-header">JupyterLab Native</h3>
                         <p class="col-sm-12 support-paragraph">A desktop application that unlocks a galaxy of possibilities.</p>
-                        <video id="lab-native-lorenz-vid" src="./assets/jupyterlab-page/lab-native/lorenz-animation.mp4"></video>
-                        <img class="lab-native-img img-responsive" src="./assets/lab-native-desktop-preview.png"/>
+                        <div class="lab-native-laptop">
+                            <video id="lab-native-lorenz-vid" src="./assets/jupyterlab-page/lab-native/lorenz-animation.mp4"></video>
+                            <img class="lab-native-img img-responsive" src="./assets/lab-native-desktop-preview.png"/>
+                        </div>
                     </div>
                     <div class="lab-native-features">
                         <div class="col-sm-4 lab-native-feature">
