Fixed bug in extension viewer, added scroll parallax to top jumbotron in JupyterLab page

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -32,7 +32,7 @@ navbar_gray: false
                         </div>
                     </div>
                     <div class="lab-loading-screen-bg"></div>
-                    <img src="assets/lab-header-preview.png" class="lab-header-preview"/>
+                    <img src="assets/lab-header-preview.png" id="lab-header-preview"/>
                 </div>
             </div>
             <div class="stars"></div>
@@ -68,7 +68,7 @@ navbar_gray: false
         </div>
     </section>
     <section>
-        <div class="section-grey">
+        <div class="section-grey lab-docpanel">
             <div class="container">
                 <div class="row lab-docpanel-overview">
                     <div class="col-xs-12 col-sm-5 lab-docpanel-header">
@@ -81,7 +81,7 @@ navbar_gray: false
                         </h5>
                     </div>
                     <div class="col-xs-12 col-sm-7">
-                        <img class="lab-docpanel-img" src="./assets/jupyterlab-docpanel-img.png"/>
+                        <img id="lab-docpanel-img" src="./assets/jupyterlab-docpanel-img.png"/>
                     </div>
                 </div>
             </div>
