Changed the spelling of Dockpanel to be spelled correctly throughout website and assets

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -68,20 +68,20 @@ navbar_gray: false
         </div>
     </section>
     <section>
-        <div class="section-grey lab-docpanel">
+        <div class="section-grey lab-dockpanel">
             <div class="container">
-                <div class="row lab-docpanel-overview">
-                    <div class="col-xs-12 col-sm-5 lab-docpanel-header">
-                        <img src="./assets/jupyterlab-docpanel-head-img.svg"/>
-                        <h3 class="section-header section-header-left">Docpanel</h3>
-                        <h5 class="lab-docpanel-desc">In JupyterLab, everything you do is held in one place: the docpanel.</h5>
-                        <h5 class="lab-docpanel-desc">Drag and drop documents to customize your workspace to make it the best for what you do.</h5>
-                        <h5 class="lab-docpanel-desc">Need to pick up where you last started?
-                            No problem, JupyterLab and the docpanel remember your previous session to get you up and running from launch.
+                <div class="row lab-dockpanel-overview">
+                    <div class="col-xs-12 col-sm-5 lab-dockpanel-header">
+                        <img src="./assets/jupyterlab-dockpanel-head-img.svg"/>
+                        <h3 class="section-header section-header-left">Dockpanel</h3>
+                        <h5 class="lab-dockpanel-desc">In JupyterLab, everything you do is held in one place: the dockpanel.</h5>
+                        <h5 class="lab-dockpanel-desc">Drag and drop documents to customize your workspace to make it the best for what you do.</h5>
+                        <h5 class="lab-dockpanel-desc">Need to pick up where you last started?
+                            No problem, JupyterLab and the dockpanel remember your previous session to get you up and running from launch.
                         </h5>
                     </div>
                     <div class="col-xs-12 col-sm-7">
-                        <img id="lab-docpanel-img" src="./assets/jupyterlab-docpanel-img.png"/>
+                        <img id="lab-dockpanel-img" src="./assets/jupyterlab-dockpanel-img.png"/>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/running-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Running Sessions</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Convienently access all current running sessions in the docpanel. Quick access to kernel shutdown makes it easy to take control of your working environment.</h5>
+                                    <h5 class="lab-ext-preview-about-desc">Convienently access all current running sessions in the dockpanel. Quick access to kernel shutdown makes it easy to take control of your working environment.</h5>
                                 </div>
                             </div>
                             <div id="tab-5" class="lab-ext-preview-content">
