Created the jumbotron for JupyterLab for the front page of the website, removed an unnecessary scroll event from the JupyterLab page

--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@ navbar_jupytercon: true
 ---
 
 <section>
-    <div class="jumbotron jupytercon-jumbotron">
+    <div class="jumbotron lab-home-jumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
+                    <img class="lab-home-jumbotron-logo img-responsive" src="./assets/home-page/lab-home-jumbotron-logo.svg"/>
+                    <h4 class="lab-home-jumbotron-subhead">The complete workspace for writing code, analyzing data, and sharing results</h4>
+                    <div class="lab-home-jumbotron-btn-container">
+                        <a class="orange-button lab-home-jumbotron-btn" href="/jupyterlab.html">Learn more</a>
+                        <a class="orange-button lab-home-jumbotron-btn" href="#">Install JupyterLab</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img class="lab-home-jumbotron-preview" src="./assets/jupyterlab-page/lab-header-preview.png"/>
+                </div>
+                <!-- <div class="col-md-12">
                     <img src="/assets/home-page/jupytercon-logo.svg" alt="Jupytercon announcement logo" id="jupytercon-logo" class="img-responsive"/>
                     <h3 class="jupytercon-subheader">August 22 - 25, 2017</h3>
                     <h3 class="jupytercon-subheader">New York, NY</h3>
                     <div class="jupytercon-button">
                         <a class="orange-button" href="https://conferences.oreilly.com/jupyter/jup-ny" target="_blank">Learn more about JupyterCon</a>
                     </div>
-                </div>
+                </div> -->
+                <div class="stars"></div>
+                <div class="twinkling"></div>
             </div>
         </div>
     </div>
@@ -50,23 +63,8 @@ navbar_jupytercon: true
     </div>
 -->
 </section>
-<section>
-    <div class="install-prompt">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h3 class="prompt-header">Ready to get started?</h3>
-                    <div>
-                        <a class="orange-button" href="https://try.jupyter.org/" target="_blank">Try it in your browser</a>
-                        <a class="orange-button install-button" href="install.html">Install the Notebook</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <section id="about-notebook">
-    <div class="section-white">
+    <div class="section-white top-section-border">
         <div class="notebook-preview">
             <div class="container">
                 <div class="row">
@@ -76,6 +74,10 @@ navbar_jupytercon: true
                     <div class="col-md-6 nb-highlight-text">
                         <h3><img src="assets/home-page/nbicon.svg" class="notebook-icon" alt="notebook icon">The Jupyter Notebook</h3>
                         <h4 class="nb-desc">The Jupyter Notebook is an open-source web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text. Uses include: data cleaning and transformation, numerical simulation, statistical modeling, machine learning and much more.</h4>
+                        <div>
+                            <a class="orange-button" href="https://try.jupyter.org/" target="_blank">Try it in your browser</a>
+                            <a class="orange-button install-button" href="install.html">Install the Notebook</a>
+                        </div>
                     </div>
                 </div>
             </div>
