updating juptyerlab language

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -47,7 +47,7 @@ navbar_gray: false
                 <div class="row">
                     <a class="orange-button" href="https://github.com/jupyterlab/jupyterlab">Download from GitHub</a>
                     <div class="col-sm-12 lab-overview-desc">
-                        <h4>JupyterLab was created to be the all-in-one workspace for data science, scientific computing, and analytical research. It provides the power, speed and flexibility to get more work done.</h4>
+                        <h4>JupyterLab is the all-in-one workspace for data science, scientific computing, and analytical research. It provides the power, speed and flexibility to get work done.</h4>
                     </div>
                     <ul class="lab-overview-features">
                         <li class="col-xs-12 col-sm-4 lab-overview-feature">
@@ -74,10 +74,10 @@ navbar_gray: false
                     <div class="col-xs-12 col-sm-5 lab-dockpanel-header">
                         <img src="./assets/jupyterlab-page/jupyterlab-dockpanel-head-img.svg"/>
                         <h3 class="section-header section-header-left">Dockpanel</h3>
-                        <h5 class="lab-dockpanel-desc">In JupyterLab, everything you do is held in one place: the dockpanel.</h5>
-                        <h5 class="lab-dockpanel-desc">Drag and drop documents to customize your workspace to make it the best for what you do.</h5>
+                        <h5 class="lab-dockpanel-desc">In JupyterLab, everything you do is held in the dockpanel.</h5>
+                        <h5 class="lab-dockpanel-desc">Drag and drop to customize your workspace.</h5>
                         <h5 class="lab-dockpanel-desc">Need to pick up where you last started?
-                            No problem, JupyterLab and the dockpanel remember your previous session to get you up and running from launch.
+                            The dockpanel remembers your previous session to get you up and running.
                         </h5>
                     </div>
                     <div class="col-xs-12 col-sm-7">
@@ -93,8 +93,8 @@ navbar_gray: false
                 <div class="row">
                     <img src="./assets/jupyterlab-page/jupyterlab-extentions-section-icon.svg" class="section-icon img-responsive"/>
                     <h3 class="col-sm-12 section-header">Extensions</h3>
-                    <p class="col-sm-12 support-paragraph">Extensions are the easiest way to tailor the JupyterLab experience. Find new extensions
-                    through the open source community or even build your own. JupyterLab includes a variety of extensions so that you can hit the ground running.</p>
+                    <p class="col-sm-12 support-paragraph"> Tailor your JupyterLab experience with extensions.  Find
+                    community-contributed extensions with the topic <a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Ajupyterlab-extensions&type=Repositories">juptyerlab-extensions</a> on GitHub.  We also have cookie-cutter templates in <a href="https://github.com/jupyterlab/extension-cookiecutter-js">Javascript </a> and <a href="https://github.com/jupyterlab/extension-cookiecutter-ts">Typescript</a> to build your own extensions. </p>
                     <div class="lab-ext-preview-viewer col-sm-12">
                         <div class="lab-ext-preview">
                             <div id="tab-1" class="lab-ext-preview-content ext-active">
@@ -114,7 +114,7 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/git-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Git</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Version control done right. The Git plugin for JupyterLab provides an easy to use interface to help you interact with your latest changes. Navigate to repos through the built-in file browser and the Git plugin will do the rest!</h5>
+                                    <h5 class="lab-ext-preview-about-desc">Version control done right. <a href="https://github.com/jupyterlab/jupyterlab-git">The Git plugin for JupyterLab</a> provides an easy to use interface to help you interact with your latest changes. Navigate to repos through the built-in file browser and the Git plugin will do the rest!</h5>
                                 </div>
                             </div>
                             <div id="tab-3" class="lab-ext-preview-content">
@@ -134,7 +134,7 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/running-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Running Sessions</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Convienently access all current running sessions in the dockpanel. Quick access to kernel shutdown makes it easy to take control of your working environment.</h5>
+                                    <h5 class="lab-ext-preview-about-desc">Conveniently access all current running sessions in the dockpanel. Quick access to kernel shutdown makes it easy to take control of your working environment.</h5>
                                 </div>
                             </div>
                             <div id="tab-5" class="lab-ext-preview-content">
@@ -144,7 +144,7 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/cell-tools-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Cell Tools</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Organizing and accessing your files has never been easier. Quickly find files, see running notebooks, and distinguish between different file types at a glance.</h5>
+                                    <h5 class="lab-ext-preview-about-desc">Jupyter notebook cells are now more powerful in Jupyterlab. Drag and drop cells, both within a document and between notebooks. Cell inputs and outputs can be collapsed and expanded. The previous workflow of cutting, copying, and pasting cells also works in Jupyterlab. </h5>
                                 </div>
                             </div>
                             <div id="tab-6" class="lab-ext-preview-content">
@@ -154,7 +154,7 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/tab-manager-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Tab Manager</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Organizing and accessing your files has never been easier. Quickly find files, see running notebooks, and distinguish between different file types at a glance.</h5>
+                                    <h5 class="lab-ext-preview-about-desc">View active tabs in the tab manager.  In single document view, you can also switch between documents using the tab manager. </h5>
                                 </div>
                             </div>
                             <div id="tab-7" class="lab-ext-preview-content">
@@ -164,7 +164,7 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/launcher-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Launcher</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Organizing and accessing your files has never been easier. Quickly find files, see running notebooks, and distinguish between different file types at a glance.</h5>
+                                    <h5 class="lab-ext-preview-about-desc">Launch a new Jupyter notebook, text editor, code console, or terminal in Jupyterlab.  The launcher gives you the ability to choose between your available kernels. </h5>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@ navbar_gray: false
                                 </div>
                                 <div class="lab-feature-card-text">
                                     <h4>Code Console</h4>
-                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                    <p>Jupyterlab contains a Qt-like console compatible with the kernels available in the Jupyter ecosystem.</p>
                                 </div>
                             </div>
                             <div class="lab-feature-card">
@@ -252,7 +252,7 @@ navbar_gray: false
                                 </div>
                                 <div class="lab-feature-card-text">
                                     <h4>Built-in Terminal</h4>
-                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                    <p>The terminal allows you to execute commands in the terminal without leaving Jupyterlab.</p>
                                 </div>
                             </div>
                             <div class="lab-feature-card">
@@ -261,7 +261,7 @@ navbar_gray: false
                                 </div>
                                 <div class="lab-feature-card-text">
                                     <h4>Built-in Text Editor</h4>
-                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                    <p>Jupyterlab provides a text editor connected that can execute code through the code console.</p>
                                 </div>
                             </div>
                             <div class="lab-feature-card">
@@ -270,7 +270,7 @@ navbar_gray: false
                                 </div>
                                 <div class="lab-feature-card-text">
                                     <h4>Themeable</h4>
-                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                    <p>We provide both a light and dark theme for Jupyterlab.</p>
                                 </div>
                             </div>
                             <div class="lab-feature-card">
@@ -279,7 +279,7 @@ navbar_gray: false
                                 </div>
                                 <div class="lab-feature-card-text">
                                     <h4>CSV Viewer</h4>
-                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                    <p>CSVs can be viewed in Jupyterlab.  Large files load quickly and scroll effortlessly.</p>
                                 </div>
                             </div>
                             <div class="lab-feature-card">
@@ -288,7 +288,7 @@ navbar_gray: false
                                 </div>
                                 <div class="lab-feature-card-text">
                                     <h4>Image Viewer</h4>
-                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                    <p>Jupyterlab can preview images from within your file manager.</p>
                                 </div>
                             </div>
                         </div>
@@ -303,7 +303,7 @@ navbar_gray: false
                 <div class="row">
                     <div id="collab-preview-tab-1" class="col-sm-6 lab-collab-preview preview-active">
                         <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
-                        <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
+                        <p class="lab-collab-preview-text">Share documents through JupyterLab’s <a href="https://github.com/jupyterlab/jupyterlab-google-drive">Google Drive extension</a></p>
                     </div>
                     <div id="collab-preview-tab-2" class="col-sm-6 lab-collab-preview">
                         <img src="./assets/jupyterlab-page/collaboration/realtime-image-mobile.svg" class="lab-collab-realtime-img-mobile img-responsive"/>
@@ -333,9 +333,6 @@ navbar_gray: false
                         <div id="lab-collab-about-section-header">
                             <h3 class="section-header section-header-left">Real-time<br/> collaboration</h3>
                             <h5 class="lab-collab-about-desc">Create something great together using the built-in Google Drive extension and chat application</h5>
-                            <span class="lab-collab-coming-soon">COMING SOON</span>
-                        </div>
-                        <ul class="lab-collab-preview-nav">
                             <li data-tab="tab-1" class="lab-collab-preview-nav-item nav-active">Share files through Google Drive</li>
                             <li data-tab="tab-2" class="lab-collab-preview-nav-item">Work in real-time with others</li>
                             <li data-tab="tab-3" class="lab-collab-preview-nav-item">Per-document chat</li>
